padding and spacing fixed in Moile  view of about  page

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -581,7 +581,7 @@ header .nav a {
   grid-template-columns: repeat(4, 1fr);
   place-items: center;
   gap: 2.3rem;
-  padding-top: 55px;
+  padding-top: 35px;
 }
 
 #main-cooking .cooking-container .cooking-card {
@@ -1795,6 +1795,11 @@ header .nav a {
   position: relative;
 }
 
+#direction .dir-block .block .container {
+  cursor: pointer;
+  user-select: none;
+}
+
 #direction .dir-block .block .container #dir-para {
   font-size: 24px;
   font-weight: 600;
@@ -2268,8 +2273,7 @@ header .nav a {
 }
 
 #about .left p {
-  margin-bottom: 3rem;
-  margin-top: 3rem;
+  margin: 3em 0em;
   color: rgba(0, 0, 0, 0.6);
   text-align: justify;
   font-size: 1.125rem;
@@ -2301,7 +2305,7 @@ header .nav a {
 @media screen and (max-width: 768px) {
   #about {
     display: grid;
-    padding: 3em;
+    padding: 35px 30px;
   }
   #about .left {
     width: 100%;
@@ -2312,7 +2316,7 @@ header .nav a {
 }
 @media screen and (max-width: 480px) {
   #about {
-    padding: 2em;
+    padding: 2em 20px;
   }
   #about h2 {
     font-size: 2em;
@@ -2320,6 +2324,7 @@ header .nav a {
   #about .left p {
     font-size: 0.925rem;
     line-height: 1.55rem;
+    margin: 2em 0em;
   }
   #about button {
     padding: 1.4rem 2.2rem;
